<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_send">

    <fragment
        android:id="@+id/navigation_send"
        android:tag="temp1"
        android:name="com.example.socketexperiment0.ui.send.SendFragment"
        android:label="@string/title_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/navigation_receive"
        android:tag="temp2"
        android:name="com.example.socketexperiment0.ui.receive.ReceiveFragment"
        android:label="@string/title_receive"
        tools:layout="@layout/fragment_receive" />

    <fragment
        android:id="@+id/navigation_about"
        android:tag="temp3"
        android:name="com.example.socketexperiment0.ui.about.AboutFragment"
        android:label="@string/title_about"
        tools:layout="@layout/about" />

</navigation>